# MofuOS

./: .gitignore  Cargo.toml  GNUmakefile  LICENSE  README.md  build.rs  x86_64-kernel.json
.cargo/: config.toml
kernel/: Cargo.toml  GNUmakefile
kernel/src/: allocator.rs  boot.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  process_start.rs
kernel/src/data_structures/: dequeue.rs  mod.rs  vector.rs
kernel/src/filesystem/: mod.rs  sirius.rs
kernel/src/filesystem/fat32/: boot_sector.rs  direntry.rs  mod.rs  test_data.rs
kernel/src/graphics/: color.rs  compositor.rs  framebuffer.rs  mod.rs  pipeline.rs  renderer.rs  resources.rs  shaders.rs  transform.rs  window.rs
kernel/src/io/: disk.rs  interrupts.rs  mod.rs  serial.rs
kernel/src/memory/: memory.rs  mod.rs  usermem.rs
kernel/src/process/: elf_loader.rs  execution.rs  mod.rs  process.rs  process_manager.rs  process_mem.rs  scheduler.rs  syscall.rs
kernel/src/programs/: theophe.rs
kernel/src/tests_exp/: mod.rs  test_filesystem.rs  test_graphics.rs  test_process.rs
kernel/src/util/: cpuinfo.rs  mod.rs  msr.rs
src/: main.rs
user/: Makefile  linker.ld
user/programs/first/: first  first.c
