[workspace]
members = ["kernel"]
resolver = "2"

[package]
name = "mofuos"
version = "0.1.0"
edition = "2024"
authors = ["franccium"]
license = "MIT"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["franccium"]
license = "MIT"

[dependencies]
ovmf-prebuilt = "0.2.8"

#[build-dependencies]
#kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-uefi" }
#bootloader = { version = "0.11.15", features = ["uefi"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
