[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[dependencies]
limine = "0.5.0"
uart_16550 = "0.5.0"
x86_64 = "0.15.2"
pc-keyboard = "0.8.0"
spin = "0.10.0"

[dependencies.lazy_static]
version = "1.5"
features = ["spin_no_std"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
